--- a/web/templates/auth/register.html
+++ b/web/templates/auth/register.html
@@ -5,28 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Регистрация</title>
     <link rel="stylesheet" href="/static/reg_log.css">
-    <script>
-        async function submitRegisterForm(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-            const response = await fetch(form.action, {
-                method: form.method,
-                body: formData,
-            });
-
-            const result = await response.json();
-
-            if (response.ok) {
-                window.location.href = "/";
-            } else {
-                document.getElementById('error-message').innerText = result.description || 'Ошибка регистрации';
-            }
-        }
-    </script>
 </head>
 <body>
-    <form action="/auth/callback/registration" method="post" onsubmit="submitRegisterForm(event)">
+    <form action="/auth/callback/registration" method="post">
         <h2>Регистрация</h2>
         <label for="username">Имя пользователя:</label>
         <input type="text" id="username" name="username" required>
