--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Access Control</title>
+    <title>Менью</title>
     <link rel="stylesheet" href="/static/index.css">
+    <script>alert("Кнопки могут быть недоступны несколько секунд.")</script>
 </head>
 <body>
     <div class="container">
